name:
  yi-chessai
version:
  0.1.0.0

build-type: Simple
cabal-version: >= 1.10

license: MIT
license-file: LICENSE

executable yi
  main-is: yi.hs
  other-modules: Yi.RainbowParensMode
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      base >= 4.10 && < 5.0
    , lens
    , microlens-platform
    , mtl
    , process
    , regex-applicative
    , yi-core
    , yi-keymap-vim
    , yi-frontend-vty 
    , yi-language
    , yi-misc-modes
    , yi-mode-haskell
    , yi-mode-javascript
    , yi-rope 
